[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Sprites/Player/Skins/Riquinho/skin-r.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Game/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Game/Player/RigidBody2D.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Player/Skins/Riquinho/Palettes/Default.png" type="Texture" id=4]

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.8

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform sampler2D palette;

void fragment() {
    // Get the sprite texture
	vec4 rgba_channels = texture(TEXTURE, UV);
	
	vec4 final_color = texture(palette, vec2(rgba_channels.r, 0.0));
	final_color.a =  rgba_channels.a;
	
	COLOR = final_color;
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 5 )
shader_param/palette = ExtResource( 4 )

[sub_resource type="CircleShape2D" id=8]
radius = 16.0

[sub_resource type="CircleShape2D" id=9]
radius = 8.0

[sub_resource type="CircleShape2D" id=10]
radius = 8.0

[node name="Player" type="Node2D"]
z_index = 1
script = ExtResource( 2 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 0
mode = 2
physics_material_override = SubResource( 6 )
gravity_scale = 8.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="RigidBody2D"]
material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
visible = false
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="RigidBody2D"]
visible = false
position = Vector2( 0, 8 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
shape = SubResource( 9 )

[node name="LabelPlayerName" type="Label" parent="RigidBody2D"]
margin_left = -200.0
margin_top = -35.0
margin_right = 200.0
margin_bottom = -21.0
text = "Player_nameaaaaaaaaaaaaaaaaaaaaaaa"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftCol" type="Area2D" parent="RigidBody2D"]
visible = false
position = Vector2( -8, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/LeftCol"]
shape = SubResource( 10 )

[node name="RightCol" type="Area2D" parent="RigidBody2D"]
visible = false
position = Vector2( 8, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/RightCol"]
shape = SubResource( 10 )
